tests/baselines/reference/parserErrorRecoveryArrayLiteralExpression1.errors.txt
parserErrorRecoveryArrayLiteralExpression1.ts(2,1): error TS1005: ',' expected.


==== parserErrorRecoveryArrayLiteralExpression1.ts (1 errors) ====
    var v = [1, 2, 3
    4, 5, 6, 7];
    ~
!!! error TS1005: ',' expected.